--- a/homepage/templates/signin.html
+++ b/homepage/templates/signin.html
@@ -55,11 +55,9 @@
         </button>
       </div>
     </div>
-    <a href="/">
-      <div class="text-center hidden-md hidden-lg cancel_btn" ng-click="close()">
+      <div class="text-center hidden-md hidden-lg cancel_btn" action="action" onclick="window.history.go(-1); return false;" value="Back">
         <span>Cancel</span>
       </div>
-    </a>
   </div>
 </div>
 
