--- a/support/templates/app.sendMessageByEmail.html
+++ b/support/templates/app.sendMessageByEmail.html
@@ -222,10 +222,10 @@
   <table cellpadding="0" width="100%" cellspacing="0" border="0" class='bgBody'>
     <tr>
       <td style="border-radius:5px">
-        <table cellpadding="0" width="620" class="container" cellspacing="0" border="0">
+        <table cellpadding="0" width="100%" class="container" cellspacing="0" border="0">
           <tr>
             <td>
-              <table cellpadding="0" cellspacing="0" border="0" width="600" class="container">
+              <table cellpadding="0" cellspacing="0" border="0" width="100%" class="container">
                 <tr>
                   <td width="100%" colspan="12" style="padding-bottom:10px;padding-top:25px;">
 
