--- a/support/templates/app.feedBack.html
+++ b/support/templates/app.feedBack.html
@@ -114,9 +114,30 @@ label.star:before {
   {% endif %}
 
   <script type="text/javascript">
-  console.log(window.location.href.split('?id='));
-  key  = window.location.href.split('?id=')[1]
+  function setCookie(cname, cvalue, exdays) {
+      var d = new Date();
+      d.setTime(d.getTime() + (exdays*24*60*60*1000));
+      var expires = "expires="+ d.toUTCString();
+      document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    }
 
+    function getCookie(cname) {
+      var name = cname + "=";
+      var decodedCookie = decodeURIComponent(document.cookie);
+      var ca = decodedCookie.split(';');
+      for(var i = 0; i <ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0) == ' ') {
+              c = c.substring(1);
+          }
+          if (c.indexOf(name) == 0) {
+              return c.substring(name.length, c.length);
+          }
+      }
+      return "";
+    }
+  key  = window.location.href.split('?id=')[1]
+  var csrftoken = getCookie("csrftoken")
   function submit(){
     var form = {
       customerRating:0,
@@ -153,7 +174,8 @@ label.star:before {
       }
     };
     xhttp.open('POST', '{{serverAddress}}/api/support/sendFeedBackRequest/', true);
-     xhttp.setRequestHeader("Content-type", "application/json");
+    xhttp.setRequestHeader('X-CSRFToken', csrftoken);
+    xhttp.setRequestHeader("Content-type", "application/json");
     xhttp.send(JSON.stringify(form));
   };
   </script>
