--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -315,7 +315,7 @@
                 <span style="color:#5B5B5B;"> <b>ISSN - </b> {{r.book.ISSN}}</span>
               </div>
             </div>
-            <div class="col-md-12 col-xs-12" style="background:#f9f9f9;">
+            <div class="col-md-12 col-xs-12 url_mob" style="background:#f9f9f9;margin-top:6px;">
               <div class="container-fluid text-left">
                 {% for bs in r.book.sections.all %}
                 <ul class="list-unstyled">
