--- a/homepage/templates/team.html
+++ b/homepage/templates/team.html
@@ -13,6 +13,7 @@
       <div class="team-member">
         <img src="{% static 'images/pradeep.png' %}" style="height:150px;border-radius:50%;">
         <h4>Pradeep</h4>
+        <div class="teamcircle" style="background-color:#3e9afa"></div>
         <div class="col-md-8 col-md-offset-2">
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           Ex-HCL <br>
@@ -27,18 +28,19 @@
       <div class="team-member">
         <img src="{% static 'images/raj.jpg' %}" style="height:150px;border-radius:50%;">
         <h4>Raj</h4>
+        <div class="teamcircle" style="background-color:#fa3e71"></div>
         <div class="col-md-8 col-md-offset-2">
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           M.Tech , IIT Kanpur - Aerospace Engineering <br>
           Co-Founder, CIOC <br>
         </div>
-
       </div>
     </div>
     <div class="col-md-4">
       <div class="team-member">
         <img src="{% static 'images/ashwini.jpeg' %}" style="height:150px;border-radius:50%;">
         <h4>Ashwini</h4>
+        <div class="teamcircle" style="background-color:#6a3efa"></div>
         <div class="col-md-8 col-md-offset-2">
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           6 Years of teaching experience (Various institutes in Kota, Rajasthan) <br>
@@ -51,6 +53,7 @@
       <div class="team-member">
         <img src="{% static 'images/atharwa.jpg' %}" style="height:150px;border-radius:50%;">
         <h4>Atharva</h4>
+        <div class="teamcircle" style="background-color:#adfa3e"></div>
         <div class="col-md-8 col-md-offset-2">
           B.Tech , IIT Bombay - Chemical Engineering <br>
           M.Tech , IIT Bombay - Chemical Engineering <br>
@@ -63,6 +66,7 @@
       <div class="team-member">
         <img src="{% static 'images/divyam.jpg' %}" style="height:150px;border-radius:50%;">
         <h4>Divyam</h4>
+        <div class="teamcircle" style="background-color:#f22e0b"></div>
         <div class="col-md-8 col-md-offset-2">
           B.Tech , IIT Bombay - Aerospace Engineering <br>
           MS , TU Delft, Netherlands <br>
