--- a/homepage/templates/book.html
+++ b/homepage/templates/book.html
@@ -1,8 +1,6 @@
-{% extends "tutorBook.html" %}
+{% extends "tutorBook.html" %}{% load staticfiles %}
 
 {% block bookcontent %}
-
-
 
 <div class="container-fluid" style="padding-top:40px;">
   <div class="col-md-12">
@@ -85,6 +83,7 @@
         </ul>
       </div>
     </div>
+    {% if request.user.is_authenticated %}
     <div class="col-md-6" style="min-height:60vh;padding:0px;">
       {% for ft in forumData %}
       <div class="row" style="border-top:1px solid #eaecf0;border-bottom:1px solid #eaecf0;padding-bottom: 2em;">
@@ -120,7 +119,7 @@
               </div>
             </div>
           </div>
-          {% if ft.clicked == 0 %}
+          {% if ft.clicked == 1 %}
           {% for ftc in ft.forumthread.all %}
           <div class="col-md-1 col-xs-2" ng-show="ft.clicked==1" id="id">
             <div style="width:60px;padding-top: 1.5em;">
@@ -167,8 +166,8 @@
                   <input name="typ" type="hidden" class="form-control" value="comment">
                   <input name="parent" type="hidden" class="form-control" value="{{ft.pk}}">
                   <textarea type="textarea" placeholder='Post a Answer Here..' style='width:75%;resize: none;margin-left: 0.5em;' name="txt"></textarea>
-                  <div style="width:75%;background-color: #F2F2F2;border:1px solid #eaecf0;padding:0;margin-top: -2px;height:4em;text-align: right;margin-left: 0.5em;">
-                    <button class="btn btn-primary" style="margin:0.7em 2em 0 0" padding="0em" type="submit">Post</button>
+                  <div style="width:75%;padding:0;margin-top: -2px;height:4em;text-align: right;margin-left: 0.5em;">
+                    <button class="btn btn-primary" style="margin:0.7em 0 0 0" padding="0em" type="submit">Post</button>
                   </div>
                 </form>
               </div>
@@ -178,7 +177,7 @@
         </div>
 
         <div class="col-md-2 text-center">
-          <button class="btn btn-primary" style="margin:1.5em 2em 0 0" padding="0em" onclick='click[{{ ft.clicked }}]'>View</button>
+          <button class="btn btn-primary" style="margin:1.5em 2em 0 0" padding="0em" onclick='click({{ft.clicked}})'>View</button>
         </div>
       </div>
       {% endfor %}
@@ -198,24 +197,26 @@
               <input name="typ" type="hidden" class="form-control" value="forum">
               <input name="page" type="hidden" class="form-control" value="{{blogname}}">
               <textarea type="textarea" placeholder='Post a Question Here..' style='width:77%;resize: none;' name="txt"></textarea>
-              <div style="width:77%;background-color: #F2F2F2;border:1px solid #eaecf0;padding:0;margin-top: -2px;height:4em;text-align: right">
+              <div style="width:77%;padding:0;margin-top: -2px;height:4em;text-align: right">
                 <span style="cursor:pointer; "><i class="fa fa-paperclip" style="font-size:1.5em;margin:0.8em;"  onclick="document.getElementById('selectedFile').click();"></i></span>
                 <input type="file" name="files" style="display: none;" id="selectedFile">
-                <span><button class="btn btn-primary" style="margin:-0.5em 2em 0 0" type="submit">Post</button> </span>
+                <span><button class="btn btn-primary" style="margin:-0.5em 0 0 0" type="submit">Post</button> </span>
               </div>
             </form>
           </div>
         </div>
       </div>
     </div>
+    {% endif %}
   </div>
 </div>
-
-<script>
-  var click = function(val){
+<script >
+function click(val){
+    console.log('kkkkkkkkkkkkk');
     val = 1;
     console.log(val);
   }
 </script>
+
 
 {% endblock %}
