--- a/homepage/templates/paperSolutions.html
+++ b/homepage/templates/paperSolutions.html
@@ -103,6 +103,8 @@
 
 
 {% block tutorjs %}
+<script src="{% static 'js/angular.min.js' %}"></script>
+<script src="{% static 'js/ui-bootstrap-tpls-0.14.3.min.js' %}"></script>
 <script src="{% static 'js/app.tutor.paper.solution.js' %}"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML'></script>
 <script type="text/x-mathjax-config">
