--- a/support/templates/app.feedBack.html
+++ b/support/templates/app.feedBack.html
@@ -64,7 +64,7 @@ label.star:before {
         <div class="row text-center">
           <div class="col-md-12 col-xs-12 col-sm-12  text-center">
             <div class="stars">
-              <label> How satisfied are you with the call?</label>
+              <label> How satisfied are you with the chat?</label>
               <form id="stars">
                 <input class="star star-5" id="star-5" type="radio" name="star" />
                 <label class="star star-5" for="star-5"></label>
