completed ncert and courses page and minor fixes

--- a/homepage/templates/footer.html
+++ b/homepage/templates/footer.html
@@ -37,12 +37,15 @@
         <ul class="list-unstyled">
           <h4 class="text-muted"><b>NCERT Solutions</b></h4>
           <li><a href="/ncert-solutions-class-12-maths/">NCERT Class 12 Maths Solutions</a></li>
+          <li><a href="/ncert-solutions-class-12-physics/">NCERT Class 12 Physics Solutions</a></li>
           <li><a href="/cbse-class-11-maths-ncert-solutions/">NCERT Class 11 Maths Solutions</a></li>
+          <li><a href="/ncert-solutions-class-11-physics/">NCERT Class 11 Physics Solutions</a></li>
         </ul>
       </div>
       <div class="nc_links col-md-4">
         <ul class="list-unstyled">
           <li><a href="/ncert-solutions-class-10-maths/">NCERT Class 10 Maths Solutions</a></li>
+          <li><a href="/ncert-solutions-class-10-science/">NCERT Class 10 Science Solutions</a></li>
         </ul>
       </div>
       <div class="nc_links col-md-4">
@@ -54,8 +57,6 @@
       </div>
     </div>
   </div>
-
-
 
   <div style="">
     <div class="col-md-12" style="margin-bottom:20px;border-bottom:1px solid #ddd;padding-bottom:30px;padding-left:12%;">
@@ -94,10 +95,10 @@
           <span class="text-muted">Copyright 2018.All Righst Reserved</span>
         </div>
         <div class="col-md-6 col-md-offset-1 copy_rights">
-          <span class="text-muted" style="padding-right:20px;border-right:1px solid #aaa;"> <a href="/desclaimer"> Disclaimer and IP</a> </span>
-          <span class="text-muted" style="padding-right:20px;padding-left:20px;"> <a href="/policy">Privacy Policy</a> </span>
-          <span class="text-muted" style="border-right:1px solid #aaa;border-left:1px solid #aaa;padding-right:20px;padding-left:20px;"> <a href="/terms">Terms and Conditions</a> </span>
-          <span class="text-muted" style="padding-left:20px;"> <a href="/refund">Refund Policy</a> </span>
+          <span class="text-muted" style="padding-right:20px;border-right:1px solid #aaa;"> <a href="/desclaimer/"> Disclaimer and IP</a> </span>
+          <span class="text-muted" style="padding-right:20px;padding-left:20px;"> <a href="/policy/">Privacy Policy</a> </span>
+          <span class="text-muted" style="border-right:1px solid #aaa;border-left:1px solid #aaa;padding-right:20px;padding-left:20px;"> <a href="/terms/">Terms and Conditions</a> </span>
+          <span class="text-muted" style="padding-left:20px;"> <a href="/refund/">Refund Policy</a> </span>
         </div>
       </div>
     </div>
