--- a/homepage/static/css/homepage.css
+++ b/homepage/static/css/homepage.css
@@ -2426,10 +2426,12 @@ hr {
   border-right: 1px solid #c7c7c7;
   width: 20%
 }
-.discover_cards{
+
+.discover_cards {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   margin-bottom: 15px;
 }
+
 .zoomOnHover:hover {
   transform: scale(1.1);
   /*box-shadow: 2px 2px 10px rgba(7, 131, 184, 1);*/
@@ -2694,9 +2696,35 @@ hr {
   border-radius: 10px 10px 10px 0px;
 }
 
-.dimgstyle{
-  width: 180px;
-  height: 300px;
+.dimgstyle {
+  width: 172px;
+  height: 225px;
+}
+
+.disc-card {
+  min-height: 225px;
+}
+
+.nc_cards {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-top: 8px;
+  margin-bottom: 8px;
+}
+
+.nc_div {
+  min-height: 80px;
+}
+
+.nc_sym {
+  font-size: 4em;
+  color: #fff
+}
+.nc_title {
+  font-size: 4em;
+  color: #fff
+}
+.nc_container{
+  width: 90%;
 }
 
 .genericHeading {
@@ -3835,6 +3863,38 @@ hr {
 
   .i_info {
     display: inline;
+  }
+
+  .dimgstyle {
+    width: 124px;
+    height: 225px;
+  }
+
+  .disc-card {
+    padding-left: 0px;
+    margin-top: 0;
+    border-radius: 10px;
+    min-height: 225px;
+  }
+
+  .nc_div {
+    min-height: 60px;
+  }
+
+  .nc_cards {
+    min-height: 40px;
+  }
+
+  .nc_sym {
+    font-size: 2.5em;
+  }
+
+  .nc_title {
+    font-size: 2.5em;
+  }
+  .nc_container{
+    margin-top: 60px;
+    width: 100%;
   }
 
   /* mobile screen size ends here.... */
