--- a/homepage/templates/header.html
+++ b/homepage/templates/header.html
@@ -3,7 +3,6 @@
     {% verbatim %}
     <div class="navbar-header" style="padding-top:7px;">
       <a class="navbar-brand" href="/" style="padding:0px; outline:none;"> <img src="/static/images/24tut/icon_grad.svg" height="100%"> </a>
-
       <div class="navbar-toggle toggleBtn" data-toggle="collapse" data-target="#myNavbar" onclick="toggleNavbar()" style="border:none;">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -13,7 +12,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav header_nav">
         <li class="header_element">
-          <a href="/ncertsolutions/" class="nav_ele">NCERT Solutions</a>
+          <a href="/ncert-solutions/" class="nav_ele">NCERT Solutions</a>
         </li>
         <li class="header_element">
           <a href="#" class="nav_ele" id="courses"> Courses</a>
