--- a/libreERP/templates/base.simple.html
+++ b/libreERP/templates/base.simple.html
@@ -17,6 +17,7 @@
       {% block content %}{% endblock %}
       {% block tutorbookcontent %}{% endblock %}
       {% block tutorexamcontent %}{% endblock %}
+      {% block tutorforumcontent %}{% endblock %}
       {% block footer %}{% endblock %}
     {% block specific_js %}{% endblock %}
   </body>
