--- a/homepage/templates/book.html
+++ b/homepage/templates/book.html
@@ -56,7 +56,7 @@
         {% if book.dp %}
         <img src="{{book.dp.url}}" class="tb_image">
         <br><br>
-        <a href="/media/{{bookUrl}}.pdf" class="btn btn-success" target="_blank">Download Book</a>
+        <a href="/media/{{bookUrl}}.pdf" class="btn btn-success" target="_blank">Download {{book.title}} Solutions In PDF</a>
         {% endif %}
       </div>
     </div>
