--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -147,7 +147,7 @@
       <!--  ng-click="signin()" -->
       {% endif %}
       <br>
-      <a href="/media/{{sectionobj.shortUrl}}.pdf" class="btn btn-success pull-right" target="_blank">Download</a>
+      <a href="/media/{{sectionobj.shortUrl}}.pdf" class="btn btn-success pull-right" target="_blank">Download {{sectionobj.title}} Solutions In PDF</a>
     </div>
     <div class="col-md-12 q_main_div">
       <div class="container-fluid q_container" ng-init="initiateMath()">
