--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -223,7 +223,7 @@
     {% endif %}
 
     {% if subPart == 'forum' %}
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top:2em;">
         <div class="col-md-6 col-md-offset-3 col-xs-12 no_padding">
           {% include "forum.html" %}
         </div>
