--- a/homepage/templates/forum.html
+++ b/homepage/templates/forum.html
@@ -1,8 +1,24 @@
-{% extends "base.simple.html" %}
+{% extends "base.simple.html" %}{% load staticfiles %}
+
+{% block specific_css %}
+<link href="{% static 'css/homepage.css' %}" rel="stylesheet">
+{% endblock %}
 
 {% block tutorforumcontent %}
 <div>
   <style media="screen">
+      .inputfileholder {
+      overflow: hidden;
+      max-width: 200px;
+      height: 21px;
+      position: relative
+    }
+
+    .inputfileholder .inputfile {
+      position: absolute;
+      left: -90px;
+      outline: none;
+    }
     .areatext{
       width: 75%;
       margin-left: 0.5em;
@@ -12,7 +28,7 @@
       margin-left: 0.5em;
     }
     .send{
-     width: 75%;
+     width: 76%;
     }
     .post{
      width: 79%;
@@ -20,15 +36,13 @@
     .head{
       display: none;
     }
-    /* footer,nav{
-      display:none;
-    } */
+
 
   </style>
   <style media="screen and (max-width:768px)">
     .areatext{
       width: 95%;
-      margin-left: 1em;
+      margin-left: 0em;
       margin-top: 0.5em;
 
      }
@@ -42,7 +56,7 @@
 
      }
      .send{
-      width: 97%;
+      width: 95%;
      }
      .post{
       width: 105%;
@@ -59,106 +73,11 @@
 
   {% if not request.user.is_authenticated %}
   <div class="row" style="margin:2em 1em;">
-    <a href="/signin"><button class="btn btn-primary" style="margin:-0.5em 0 0 0;padding:0.2em 1em;border-radius:0%">Ask a New Question</button></a>
+    <a href="/signin"><button class="btn btn-primary" style="margin:-0.5em 0 0 0;padding:0.2em 1em;border-radius:0%">Log In to Ask a New Question</button></a>
   </div>
   {% endif %}
-  {% for ft in forumData %}
-  {% if ft.page == blogname %}
-  <div class="row" style="border-bottom:1px solid #eaecf0;padding-bottom: 1em;">
-    <div class="col-md-1 col-xs-1">
-      <div style="width:50px;padding-top: 1.5em;">
-        {% if ft.user.profile.displayPicture.url %}
-        <img src="{{ft.user.profile.displayPicture.url}}" style="width:45px;border-radius:50%;height:45px;" />
-        {% else %}
-        <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
-        {% endif %}
-      </div>
-    </div>
-
-    <div class="col-md-11 col-xs-12 text-left coloumn">
-      <div class="no_pad" style="display: flex;align-items: center;">
-
-        <div class="contentrow" style="flex: 0 1 auto;width:100%;">
-          <div class="toprow" style="">
-            <span style="font-size:17px;cursor:pointer;color:#3C5899">{{ft.user.username}}</span>
-          </div>
-          <div class="bottomrow" style="font-size: 1em;">
-            <span class="" style="font-size:15px;color: #3C4556;">{{ft.txt}}
-            </span>
-          </div>
-          {% if ft.attachment %}
-          <div class="bottomrow">
-            <img src="{{ft.attachment.url}}" style="width:150px;height:150px;" />
-          </div>
-          {% endif %}
-          <div class="bottomrow" style="font-size: 1em;">
-            <span class="" style="font-size:13px;color: #3C5899;">{{ ft.forumthread.all|length }}Answers
-            </span>
-          </div>
-        </div>
-      </div>
-      {% if request.user.is_authenticated %}
-      <div class="row">
-        <div class="text-center" style="padding-top:0;margin-left:0.5em;">
-          <div class="col-md-1 col-xs-2">
-            <div style="width:60px;padding-top: 1.5em;">
-              {% if request.user.profile.displayPicture %}
-              <img src="{{request.user.profile.displayPicture.url}}" style="width:40px;border-radius:50%;height:40px;" />
-              {% else %}
-              <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
-              {% endif %}
-            </div>
-          </div>
-          <div class="col-md-11 col-xs-10  text-left" style="padding-top: 1em;">
-            <form action="/saveForumDetails/" method="post">{% csrf_token %}
-              <input name="typ" type="hidden" class="form-control" value="comment">
-              <input name="parent" type="hidden" class="form-control" value="{{ft.pk}}">
-              <textarea class="areatext" type="textarea" placeholder='Post a Answer Here..' style='resize: none;' name="txt"></textarea>
-              <div class="send " style="padding:0;margin-top: -2px;height:4em;text-align: right;margin-left: 0.5em;">
-                <button class="btn btn-primary" style="margin:0.7em 0 0 0;padding:0.2em 1em;border-radius:0%" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-      {% endif %}
-      {% for ftc in ft.forumthread.all %}
-      {% if ftc.verified is True %}
-      <div class="col-md-1 col-xs-2">
-        <div style="width:60px;padding-top: 1.5em;">
-          {% if ftc.user.profile.displayPicture %}
-          <img src="{{ftc.user.profile.displayPicture.url}}" style="width:45px;border-radius:50%;height:45px;" />
-          {% else %}
-          <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
-          {% endif %}
-        </div>
-      </div>
-      <div class="col-md-11 col-xs-10 text-left">
-        <div class="row">
-          <div class="no_pad" style="{% if  request.user.is_authenticated %}border-top: 1px solid #eaecf0{% endif %};display: flex;align-items: center;margin-left: 1em;">
-            <div class="contentrow" style="flex: 0 1 auto;max-width:100%;">
-              <div class="bottomrow" style="font-size: 1em;">
-                <span class="" style="font-size:15px;color: #3C4556;">{{ftc.txt}}
-                </span>
-              </div>
-              <div class="bottomrow" style="font-size: 1em;">
-                <span class="" style="font-size:13px;color:#9E9E9E;">Posted {{ftc.created}} by <span style="color:#3C5899;">{{ftc.user.username}}</span>
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      {% endif %}
-      {% endfor %}
-
-    </div>
-
-  </div>
-  {% endif %}
-  {% endfor %}
   {% if request.user.is_authenticated %}
-  <div class="row">
+  <div class="row" >
     <div class="text-center" style="padding-top:2em;">
       <div class="col-md-1 col-xs-2" style="margin-left: -0.5em;">
         <div style="width:60px;padding-top: 1.5em;">
@@ -176,7 +95,7 @@
           <textarea class="parenttext" rows="3" type="textarea" placeholder='Post a Question Here..' style='resize: none;margin-left:1.2em;' name="txt"></textarea>
           <div class="post" style="padding:0;margin-top: -2px;height:4em;text-align: right">
             <span style="cursor:pointer; "><i class="fa fa-paperclip" style="font-size:1.5em;margin:0.8em ;" onclick="document.getElementById('selectedFile').click();"></i></span>
-            <input type="file" name="files" style="display: none;" id="selectedFile">
+            <input type="file" name="files" style="display: none;" id="selectedFile" >
             <span><button class="btn btn-primary" style="margin:-0.5em 0 0 0;padding:0.2em 1em;border-radius:0%" type="submit">Post</button> </span>
           </div>
         </form>
@@ -184,6 +103,102 @@
     </div>
   </div>
   {% endif %}
+  {% for ft in forumData %}
+  {% if ft.page == blogname %}
+  <div class="row " style="border:1px solid #eaecf0;padding-bottom: 1em;margin-top:0.5em;">
+    <div class="col-md-1 col-xs-1 ">
+      <div style="width:50px;padding-top: 1.5em;">
+        {% if ft.user.profile.displayPicture.url %}
+        <img src="{{ft.user.profile.displayPicture.url}}" style="width:45px;border-radius:50%;height:45px;" />
+        {% else %}
+        <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+        {% endif %}
+      </div>
+    </div>
+
+    <div class="col-md-11 col-xs-12 text-left coloumn ">
+      <div class="no_pad" style="display: flex;align-items: center;">
+
+        <div class="contentrow" style="flex: 0 1 auto;width:100%;">
+          <div class="toprow" style="">
+            <span style="font-size:17px;cursor:pointer;color:#3C5899">{{ft.user.username}}</span>
+          </div>
+          <div class="bottomrow" style="font-size: 1em;">
+            <span class="" style="font-size:15px;color: #3C4556;">{{ft.txt}}
+            </span>
+          </div>
+          {% if ft.attachment %}
+          <div class="bottomrow">
+            <img src="{{ft.attachment.url}}" style="width:150px;height:150px;" />
+          </div>
+          {% endif %}
+          <div class="bottomrow" style="font-size: 1em;">
+            <span class="" style="font-size:13px;color: #3C5899;">{{ft.created}}
+            </span>
+          </div>
+        </div>
+      </div>
+      {% if request.user.is_authenticated %}
+      <div class="row ">
+        <div class="text-center" style="padding-top:0;margin-left:0.5em;">
+          <div class="col-md-1 col-xs-2 ">
+            <div style="width:60px;padding-top: 1.5em;">
+              {% if request.user.profile.displayPicture %}
+              <img src="{{request.user.profile.displayPicture.url}}" style="width:40px;border-radius:50%;height:40px;" />
+              {% else %}
+              <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+              {% endif %}
+            </div>
+          </div>
+          <div class="col-md-11 col-xs-10  text-left " style="padding-top: 1em;">
+            <form action="/saveForumDetails/" method="post">{% csrf_token %}
+              <input name="typ" type="hidden" class="form-control" value="comment">
+              <input name="parent" type="hidden" class="form-control" value="{{ft.pk}}">
+              <textarea class="areatext" type="textarea" placeholder='Post a Answer Here..' style='resize: none;' name="txt"></textarea>
+              <div class="send " style="padding:0;margin-top: -2px;height:4em;text-align: right;margin-left: 0;">
+                <button class="btn btn-primary" style="margin:0.7em 0 0 0;padding:0.2em 1em;border-radius:0%" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+      {% for ftc in ft.forumthread.all %}
+      {% if ftc.verified is True %}
+      <div class="col-md-1 col-xs-2 ">
+        <div style="width:60px;padding-top: 1em;">
+          {% if ftc.user.profile.displayPicture %}
+          <img src="{{ftc.user.profile.displayPicture.url}}" style="width:45px;border-radius:50%;height:45px;" />
+          {% else %}
+          <img src="/static/images/24tut/hom/dp.jpg" style="width:45px;border-radius:50%;height:45px;" />
+          {% endif %}
+        </div>
+      </div>
+      <div class="col-md-11 col-xs-10 text-left ">
+        <div class="row ">
+          <div class="no_pad" style="{% if  request.user.is_authenticated %}border-top: 0{% endif %};display: flex;align-items: center;margin-left: 1em;">
+            <div class="contentrow" style="flex: 0 1 auto;max-width:100%;">
+              <div class="bottomrow" style="font-size: 1em;">
+                <span class="" style="font-size:15px;color: #3C4556;">{{ftc.txt}}
+                </span>
+              </div>
+              <div class="bottomrow" style="font-size: 1em;">
+                <span class="" style="font-size:13px;color:#9E9E9E;">Posted {{ftc.created}} by <span style="color:#3C5899;">{{ftc.user.username}}</span>
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endif %}
+      {% endfor %}
+      <!-- style="{% if not forloop.counter|divisibleby:2 %}background-color:#F2F2F2{% endif %};" -->
+    </div>
+
+  </div>
+  {% endif %}
+  {% endfor %}
+
 
 </div>
 
