--- a/homepage/templates/bookContent.html
+++ b/homepage/templates/bookContent.html
@@ -114,7 +114,7 @@
         <a href="/account/">
           <div class="user_img" id="flybtn">
             {% if request.user.is_authenticated %}
-            <img src=/media/{{request.user.profile.displayPicture}} style="cursor:pointer;height:40px;width:40px; border-radius:50%;">
+            <img src="/media/{{request.user.profile.displayPicture}}" style="cursor:pointer;height:40px;width:40px; border-radius:50%;">
             {% endif %}
           </div>
         </a>
@@ -140,13 +140,26 @@
         <h3>{{book.author}}</h3>
       </div>
       {% if request.user.is_authenticated %}
-      <a href="/account/" class="btn btn-primary pull-right sign_btn">{{request.user.get_username}} </a>
+      <div class="col-md-4 hidden-xs hidden-sm" style="padding:20px 20px 20px 150px;">
+        <div class="container-fluid wrapper">
+          <div class="admin_wrapper_div" style="background-color:#8b5dab;width:230px;border-top-left-radius:30px;border-top-right-radius:30px;border-bottom-left-radius:10px;border-bottom-right-radius:10px;">
+            <div class="w_left" style="width:50px;height:50px; border-radius:50%;float:left;position:relative">
+              <img src="/media/{{request.user.profile.displayPicture}}" style="cursor:pointer;height:40px;width:40px; border-radius:50%;position:absolute;top:4px;left:10px;">
+            </div>
+            <div class="w_right" style="max-width:230px;height:50px;background-color:#a0e6f5;border-radius:50px;">
+              <h5 class="text-center" style="font-size:20px;margin-top:0px;overflow:hidden;padding-top:10px;"><b>{{request.user.first_name}}</b> </h5>
+            </div>
+            <div class="text-center">
+              <h5 style="font-size:20px;padding-bottom:8px;">Balance 01:00 Hrs</h5>
+            </div>
+          </div>
+        </div>
+      </div>
       {% endif %}
       {% if not request.user.is_authenticated %}
       <a style="cursor:pointer;" class="btn btn-primary pull-right sign_btn" href="/signin/">sign in</a>
       {% endif %}
-      <br>
-      <a href="/media/{{sectionobj.shortUrl}}.pdf" class="btn btn-success pull-right" target="_blank">Download {{sectionobj.title}} Solutions In PDF</a>
+        <a href="/media/{{sectionobj.shortUrl}}.pdf" class="btn btn-success pull-right down_btn" target="_blank">Download {{sectionobj.title}} Solutions In PDF</a>
     </div>
     <div class="col-md-12 q_main_div">
       <div class="container-fluid q_container" ng-init="initiateMath()">
