--- a/homepage/templates/book.html
+++ b/homepage/templates/book.html
@@ -35,6 +35,9 @@
             </tr>
           </table>
         </div>
+        <div class="col-md-6 pull-right col-xs-12" style="margin-right:1em;">
+            <a href="/media/{{bookUrl}}.pdf"  target="_blank" ><button class="btn btn-success" style="white-space: normal;padding:0.5em 0.5em">Download {{book.title}} Solutions In PDF</button></a>
+        </div>
         <!-- <div class="col-md-4 col-sm-12 col-xs-12 smdevice">
           <table class="alignintable">
             <tr>
@@ -59,7 +62,7 @@
         {% if book.dp %}
         <img src="{{book.dp.url}}" class="tb_image">
         <br><br>
-        <a href="/media/{{bookUrl}}.pdf" class="btn btn-success" target="_blank">Download {{book.title}} Solutions In PDF</a>
+        <!-- <a href="/media/{{bookUrl}}.pdf" class="btn btn-success" target="_blank">Download {{book.title}} Solutions In PDF</a> -->
         {% endif %}
       </div>
     </div>
@@ -99,7 +102,7 @@ margin-left: -2.2em;">
         </div>
         {% endverbatim %}
       </div>
-       {% include "forum.html" %} 
+       {% include "forum.html" %}
     </div>
   </div>
 </div>
