--- a/homepage/templates/courses.html
+++ b/homepage/templates/courses.html
@@ -224,7 +224,7 @@
 
     {% if subPart == 'forum' %}
     <div class="container-fluid" style="margin-top:2em;">
-        <div class="col-md-6 col-md-offset-3 col-xs-12 no_padding">
+        <div class="col-md-6 col-md-offset-3 col-xs-12 ">
           {% include "forum.html" %}
         </div>
     </div>
